--- a/Projet Web/index.html
+++ b/Projet Web/index.html
@@ -78,7 +78,7 @@
                 <section class="header" id="produits">
                     <h1> Le meilleur de la coiffure...</h1> 
                     <p> <h1>C'est chez nous, chez Barber shop </h1> </p>  
-                    <button> <h3> parcourir</h3> </button>
+                    <a href="coupes.html"><input class="parcourir" type="submit" value="parcourir"></a>
                 </section>
                 
             </div>
